--- a/jenkinsFile
+++ b/jenkinsFile
@@ -27,12 +27,12 @@ pipeline {
       }
   }
 
-def build() {
-    return {
-        sh """
-         echo "************Building the ${params.Environment} pipeline***************"
-         mvn clean package 
-        """ 
-    }
-}
+// def build() {
+//     return {
+//         sh """
+//          echo "************Building the ${params.Environment} pipeline***************"
+//          mvn clean package 
+//         """ 
+//     }
+// }
 }
