--- a/jenkinsFile
+++ b/jenkinsFile
@@ -21,7 +21,7 @@ pipeline {
         steps{
           script {
                 sh"""
-                 mvn test
+                 mvn -Dtest=TestRunnerSO.java test
                  """
             }
         }
