Added few dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,20 @@
   <artifactId>CucumberProject</artifactId>
   <version>0.0.1-SNAPSHOT</version>
  
-	
+	<build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.8.1</version>
+            <configuration>
+                <source>17</source> <!-- Use the version of Java you're working with -->
+                <target>17</target> <!-- Match it to the Java runtime version -->
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
+
 	<dependencies>
 	<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
 <!-- 
@@ -123,12 +136,12 @@
 
 
 		<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
-		<dependency>
+		<!-- <dependency>
 			<groupId>io.cucumber</groupId>
 			<artifactId>cucumber-junit</artifactId>
 			<version>5.7.0</version>
 			<scope>test</scope>
-		</dependency>
+		</dependency> -->
 
 		<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 		<dependency>
