--- a/jenkinsFile
+++ b/jenkinsFile
@@ -21,7 +21,7 @@ pipeline {
         steps{
           script {
                 sh"""
-                 mvn -Dtest=TestRunnerSO test 
+                mvn clean install && mvn test 
                  """
             }
         }
